【更新】logo掉圖、響應式宣告
- 解決 header logo 相對路徑掉圖問題
- 補上網頁<head></head>響應式宣告以方便手機操作

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" > -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <!--[if lte IE 9]>
+  瀏覽器版本過舊
+  <![endif]-->
   <title>Word-Clock</title>
 </head>
 <body>
