--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <!--[if lte IE 9]>
   瀏覽器版本過舊
   <![endif]-->
-  <title>Word-Clock</title>
+  <title>Wasting Board</title>
 </head>
 <body>
   <div id="root"></div>
